Test + serialization
+Plugin set up to test the actual serialization
+ItemBuilder class added to clean up the deserialization code
+ added boolean support to the serializationwriter/ -reader
+ added firework serialization, TODO; firewrok deserialization